# biometric_mqtt_client

./: .env  Cargo.toml  Dockerfile
src/: main.rs
src/db/: db_service.rs
src/logger/: mod.rs
src/models/: mod.rs
src/mqtt/: mod.rs  mqtt_client.rs  mqtt_handler.rs
src/redis/: redis_service.rs
testing/: mqtt_test.sh
