[package]
name = "vsense_biometric_mqtt_client"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres","chrono"] }
serde = { version = "1.0.209", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.127"
fern = "0.6.2"
log = "0.4.22"
redis={version="0.26.1",features=["tokio-comp","aio"]}
